--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,20 @@ android {
 
 dependencies {
 
+
+    def lifecycle_version = "2.4.0-alpha02"
+    def arch_version = "2.1.0"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+    //Viewmodel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
 
 
     testImplementation 'junit:junit:4.+'
